...
      FinishCreatePuzzleButton?.hero.modifiers = [.fade]
      InfoLabel.hero.id = HeroID.RemainingLabel_Label
      OptionButton.hero.id = HeroID.InfoLabel_Option
   }
   
   func InitAccessibilityIdentifires() {
      collectionView?.accessibilityIdentifier = "CleateStageVC_collectionView"
      TrashImageView.accessibilityIdentifier = "CleateStageVC_TrashImageView"
      FinishCreatePuzzleButton?.accessibilityIdentifier = "CleateStageVC_FinishCreatePuzzleButton"
      FinishChouseResPuzzleButton?.accessibilityIdentifier = "CleateStageVC_FinishChouseResPuzzleButton"
      InfoLabel.accessibilityIdentifier = "CleateStageVC_InfoLabel"
      OptionButton.accessibilityIdentifier = "CleateStageVC_OptionButton"
      BackImageView?.accessibilityIdentifier = "CleateStageVC_BackImageView"
   }
   
   
   func InitUsingPiceSet() {
      UsingPiceSet = DefaultPiceSet
...
