...
   
   private var TouchBegan = CGPoint(x: 0, y: 0)
   private var AreYouLarge: Bool = false
   
   private var isLocked = false
   
   private let NodeText: SKLabelNode = SKLabelNode(text: NSLocalizedString("Home", comment: ""))
   
   
   init(ViewX: Int, ViewY: Int, StartX: Int, StartY: Int) {
      
      
      let NodeSize = CGSize(width: CGFloat(ViewX), height: CGFloat(ViewY))
...
