...
import Firebase
import Hero
import SnapKit
import SCLAlertView

class StageMakingViewController: UIViewController{
   @IBOutlet weak var StageMakingButton: FUIButton!
   
   @IBOutlet weak var InfoLabel: UILabel!
   @IBOutlet weak var RemainingLabel: UILabel!
   
   @IBOutlet weak var StageMakingQuestionButton: UIButton!
   
...
