...
      ViewH = self.view.frame.height
      FViewW = ViewW / 25
      FViewH = ViewH / 32
   }
   
   private func  InitAccessibilityIdentifires() {
      SellectStageButton?.accessibilityIdentifier = "CreateHomeVC_SellectStageButton"
      StageAuthCreateButton?.accessibilityIdentifier = "CreateHomeVC_StageAuthCreateButton"
      InternetUsersStageButton?.accessibilityIdentifier = "CreateHomeVC_InternetUsersStageButton"
   }
   
   private func InitBackgroundImageView() {
      BackGroundImageView = BackGroundImageViews(frame: self.view.frame)
      self.view.addSubview(BackGroundImageView!)
      self.view.sendSubviewToBack(BackGroundImageView!)
...
