...
   }
   
  
   
   
   private func  InitAccessibilityIdentifires() {
      StageCollectionView?.accessibilityIdentifier = "SellectInternetStageVC_StageCollectionView"
      BackButton?.accessibilityIdentifier = "SellectInternetStageVC_BackButton"
      segmentedControl?.accessibilityIdentifier = "SellectInternetStageVC_Segment"
   }
   
   //MARK:- セグメントのInit
   private func InitSegmentedControl() {
      let Latest = NSLocalizedString("Latest", comment: "")
      let PlayCount = NSLocalizedString("PlayCount", comment: "")
...
